--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<!-- PROJECT LOGO -->\r <br />\r <div align=\"center\">\r   <a href=\"https://github.com/othneildrew/Best-README-Template\">\r     <img src=\"pics/logo-nobg.png\" alt=\"Logo\" width=\"80\" height=\"80\">\r   </a>",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/ap223jt/REKO-ring#readme",
   "dependencies": {
-    "ejs": "^3.1.6",
+    "axios": "^0.26.1",
+    "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "mongoose": "^6.2.6"
   },
