--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
