--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "<!-- PROJECT LOGO -->\r <br />\r <div align=\"center\">\r   <a href=\"https://github.com/othneildrew/Best-README-Template\">\r     <img src=\"pics/logo-nobg.png\" alt=\"Logo\" width=\"80\" height=\"80\">\r   </a>",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "repository": {
@@ -25,7 +26,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "nodemon": "^2.0.15"
   }
 }
